# cicero-pipe

./: .gitignore  README.md  cabal.project  cicero-pipe.cabal  flake.nix
nix/materialized/x86_64-darwin/hoogle/: default.nix
nix/materialized/x86_64-darwin/project/: default.nix
nix/materialized/x86_64-darwin/project/.plan.nix/: cicero-pipe.nix
nix/materialized/x86_64-linux/project/: default.nix
nix/materialized/x86_64-linux/project/.plan.nix/: cicero-pipe.nix
src/: Args.hs  Main.hs  Parse.hs  Post.hs
