cabal-version: 3.4
name:          cicero-pipe
version:       1.1.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE
maintainer:  shea.levy@iohk.io
author:      Shea Levy
homepage:    https://github.com/input-output-hk/cicero-pipe#readme
bug-reports: https://github.com/input-output-hk/cicero-pipe/issues
description: Stream facts to Cicero
build-type: Simple

source-repository head
    type: git
    location: https://github.com/input-output-hk/cicero-pipe

executable cicero-pipe
    main-is: Main.hs
    build-depends:
      base ^>= 4.16.3.0,
      aeson ^>= 2.0.3.0,
      attoparsec ^>= 0.14.4,
      bytestring ^>= 0.11.3.1,
      cicero-api ^>= 0.1.0.0,
      http-client ^>= 0.7.13.1,
      http-client-tls ^>= 0.3.6.1,
      optparse-applicative ^>= 0.17.0.0,
      servant ^>= 0.19,
      servant-client ^>= 0.19,
      servant-client-core ^>= 0.19
    hs-source-dirs:   src
    default-language: Haskell2010
